--- a/css/styles.css
+++ b/css/styles.css
@@ -3,30 +3,28 @@
 
 body {
    font-family: "Montserrat";
+   text-align: center;
 }
 
-#title {
-   background-color: #F86D6C;
-   color: #fff;
-}
-
-h1 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
    font-family: 'Montserrat', sans-serif;
-   font-weight: 900;
-   font-size: 4rem;
-   line-height: 1.5;
+
 }
 
 h2 {
-   font-family: 'Montserrat';
    font-weight: 700;
    font-size: 3.5rem;
    line-height: 1.5;
 }
 
 h3 {
-   font-family: 'Montserrat';
    font-weight: bolder;
+   line-height: 1.5;
 }
 
 p {
@@ -34,7 +32,32 @@ p {
 }
 
 .container-fluid {
+   padding: 7% 15%;
+}
+
+.big-heading {
+   font-weight: 900;
+   font-size: 4rem;
+   line-height: 1.5;
+}
+
+/* Sections */
+.coloured-section {
+   background-color: #ff4c68;
+   color: #fff;
+}
+
+
+.white {
+   background-color: #fff;
+}
+
+/* Title section */
+
+
+#title .container-fluid {
    padding: 3% 15% 7%;
+   text-align: left;
 }
 
 
@@ -78,13 +101,12 @@ p {
 
 #features {
    position: relative;
-   padding: 7% 15%;
    background-color: #fff;
    z-index: 1;
 }
 
 .feature-box {
-   text-align: center;
+
    padding: 5% 7%;
 }
 
@@ -100,9 +122,8 @@ p {
 /* Testimonial Section */
 
 #testimonials {
-   text-align: center;
-   background-color: #F86D6C;
-   color: #fff;
+   background-color: #ef8172;
+
 }
 
 .cursive {
@@ -114,13 +135,7 @@ p {
    border-radius: 100%;
 }
 
-.carousel-item {
-   padding: 7% 15%;
-}
-
 #press {
-   background-color: #F86D6C;
-   text-align: center;
    padding-bottom: 3%;
 }
 
@@ -133,20 +148,13 @@ p {
 
 #pricing {
    padding: 100px;
-   text-align: center;
 }
 
 .pricing-columns {
    padding: 3% 2%;
 }
 
-
-#cta {
-   color: #fff;
-   text-align: center;
-   background-color: #F86D6C;
-   padding: 7% 15%;
-}
+/* Cta */
 
 .cta-head {
    font-family: 'Montserrat';
@@ -163,19 +171,13 @@ p {
 }
 
 /* Footer Section */
-#footer {
-   text-align: center;
-   padding: 7% 15%;
-}
 
 .social-icon {
    padding: 20px 10px;
 }
 
 @media (max-width: 1063px) {
-   #title {
-      text-align: center;
-   }
+   #title {}
 
    .title-image {
       position: static;
